--- a/index.html
+++ b/index.html
@@ -75,5 +75,97 @@
                 </ul>
             </div>   
         </header>
+        <main>
+            <section class="intro">
+                <div class="intro-wrap">
+                    <div class="intro-left">
+                        <div class="menu-spec">
+                            <span>PLAYSTATION</span>
+                        </div>
+                        <h2>DOWNWELL AND SPACE HULK: TACTICS ARE COMING TO XBOX GAME PASS FOR PC</h2>
+                        <div>
+                            <img src="img/meta-pic.jpg">
+                            <span>by Marcin Jankowski</span>
+                            <span>Aug 01, 2019</span>
+                        </div>
+                    </div>
+                    <div class="intro-right">
+                        <div class="intro-right__header">
+                            <h3>TREDING POSTS</h3>
+                            <div class="intro-right__chevron">
+                                <i class="fa fa-chevron-left"></i>
+                                <i class="fa fa-chevron-right"></i>
+                            </div>
+                        </div>
+                        <div class="intro-right__item">
+                            <img src="img/trending-5.jpg">
+                            <div class="right-column">    
+                                <h4>Jalopy developer is making a game where you 'build stuff...</h4>
+                                <ul class="intro-right__item-date">
+                                    <li>
+                                        <i class="far fa-clock"></i>
+                                    </li>
+                                    <li> Aug 01, 2019 </li>
+                                    <li>
+                                        <i class="fa fa-comment-o"></i>
+                                    </li>
+                                    <li>12</li>
+                                </ul>
+                            </div>    
+                        </div>
+                        <div class="intro-right__item">
+                            <img src="img/trending-6.jpg">
+                            <div class="right-column">
+                                <h4>Valve updates Steam's new Interactive Reco- mmender, teases
+                                        a...</h4>
+                                <ul class="intro-right__item-date">
+                                    <li>
+                                        <i class="far fa-clock"></i>
+                                    </li>
+                                    <li> Aug 01, 2019</li>
+                                    <li>
+                                        <i class="fa fa-comment-o"></i>
+                                    </li>
+                                    <li>12</li>
+                                </ul>
+                            </div>    
+                        </div>
+                        <div class="intro-right__item">
+                            <img src="img/trending-7.jpg">
+                            <div class="right-column">
+                                <h4>Jalopy developer is making a game where you 'build stuff...</h4>
+                                <ul class="intro-right__item-date">
+                                    <li>
+                                        <i class="far fa-clock"></i>
+                                    </li>
+                                    <li> Aug 01, 2019</li>
+                                    <li>
+                                        <i class="fa fa-comment-o"></i>
+                                    </li>
+                                    <li>12</li>
+                                </ul>
+                            </div>    
+                        </div>
+                        <div class="intro-right__item">
+                            <img src="img/trending-8.jpg">
+                            <div class="right-column">
+                                <h4>Jalopy developer is making a game where you 'build stuff...</h4>
+                                <ul class="intro-right__item-date">
+                                    <li>
+                                        <i class="far fa-clock"></i>
+                                    </li>
+                                    <li> Aug 01, 2019</li>
+                                    <li>
+                                        <i class="fa fa-comment-o"></i>
+                                    </li>
+                                    <li>12</li>
+                                </ul>
+                            </div>    
+                        </div>    
+                        
+                    </div>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
