--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                 <h4>Jalopy developer is making a game where you 'build stuff...</h4>
                                 <ul class="intro-right__item-date">
                                     <li>
-                                        <i class="far fa-clock"></i>
+                                        <i class="fa fa-clock-o"></i>
                                     </li>
                                     <li> Aug 01, 2019 </li>
                                     <li>
@@ -120,7 +120,7 @@
                                         a...</h4>
                                 <ul class="intro-right__item-date">
                                     <li>
-                                        <i class="far fa-clock"></i>
+                                        <i class="fa fa-clock-o"></i>
                                     </li>
                                     <li> Aug 01, 2019</li>
                                     <li>
@@ -136,7 +136,7 @@
                                 <h4>Jalopy developer is making a game where you 'build stuff...</h4>
                                 <ul class="intro-right__item-date">
                                     <li>
-                                        <i class="far fa-clock"></i>
+                                        <i class="fa fa-clock-o"></i>
                                     </li>
                                     <li> Aug 01, 2019</li>
                                     <li>
@@ -152,7 +152,7 @@
                                 <h4>Jalopy developer is making a game where you 'build stuff...</h4>
                                 <ul class="intro-right__item-date">
                                     <li>
-                                        <i class="far fa-clock"></i>
+                                        <i class="fa fa-clock-o"></i>
                                     </li>
                                     <li> Aug 01, 2019</li>
                                     <li>
@@ -162,7 +162,75 @@
                                 </ul>
                             </div>    
                         </div>    
-                        
+                    </div>
+                </div>
+            </section>
+            <section class="latest-preview">
+                <div class="latest-preview__container">    
+                    <div class="latest-preview__header">    
+                        <h3>LATEST PREVIEW</h3>
+                        <div class="latest-preview__chevron">
+                            <i class="fa fa-chevron-left"></i>
+                            <i class="fa fa-chevron-right"></i>
+                        </div>
+                    </div>
+                    <div class="latest-preview__items">
+                        <div class="latest-preview__item">
+                            <img class="lp-pic" src="img/lp-1.jpg">
+                            <h4>Teamfight Tactics is in chaos after patch...</h4>
+                            <ul class="latest-preview__item-date">
+                                <li>
+                                    <i class="fa fa-clock-o"></i>
+                                </li>
+                                <li> Aug 01, 2019</li>
+                                <li>
+                                    <i class="fa fa-comment-o"></i>
+                                </li>
+                                <li>12</li>
+                            </ul>
+                        </div>
+                        <div class="latest-preview__item">
+                            <img class="lp-pic" src="img/lp-2.jpg">
+                            <h4>Lenovo’s y540 gaming laptop with an rtx 2060...</h4>
+                            <ul class="latest-preview__item-date">
+                                <li>
+                                    <i class="fa fa-clock-o"></i>
+                                </li>
+                                <li> Aug 01, 2019</li>
+                                <li>
+                                    <i class="fa fa-comment-o"></i>
+                                </li>
+                                <li>12</li>
+                            </ul>
+                        </div>
+                        <div class="latest-preview__item">
+                            <img class="lp-pic" src="img/lp-3.jpg">
+                            <h4>A monter prom poster got hijacked for a...</h4>
+                            <ul class="latest-preview__item-date">
+                                <li>
+                                    <i class="fa fa-clock-o"></i>
+                                </li>
+                                <li> Aug 01, 2019</li>
+                                <li>
+                                    <i class="fa fa-comment-o"></i>
+                                </li>
+                                <li>12</li>
+                            </ul>
+                        </div>
+                        <div class="latest-preview__item">
+                            <img class="lp-pic" src="img/lp-4.jpg">
+                            <h4>Facebook wants to read your thoughts with...</h4>
+                            <ul class="latest-preview__item-date">
+                                <li>
+                                    <i class="fa fa-clock-o"></i>
+                                </li>
+                                <li> Aug 01, 2019</li>
+                                <li>
+                                    <i class="fa fa-comment-o"></i>
+                                </li>
+                                <li>12</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </section>
