instagram container added first item of left column

--- a/index.html
+++ b/index.html
@@ -505,6 +505,47 @@
                     </div>
                 </div>
             </section>
+            <section class="instagram">
+                <div class="instagram__container">
+                    <div class="instagram__left-column">
+                        <div class="instagram__header">
+                            <h3>INSTAGRAM</h3>
+                        </div>
+                        <div class="instagram__left-column-item">
+                            <img src="img/insta-1.jpg">
+                            <div class="instagram__left-column-item-content">    
+                                <div class="menu-spec">
+                                    <span>REVIEWS</span>
+                                </div>
+                                <h3>HERE'S AN HOUR OF SIDE-QUESTS FROM THE OUTHER WORLDS...</h3>
+                                <ul class="instagram__item-date">
+                                    <li>by</li>
+                                    <li class="admin-post">Admin</li>
+                                    <li>
+                                        <i class="fa fa-clock-o"></i>
+                                    </li>
+                                    <li> Aug 01, 2019</li>
+                                    <li>
+                                        <i class="fa fa-comment-o"></i>
+                                    </li>
+                                    <li>20</li>
+                                </ul>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices...</p>
+                            </div>
+
+                        </div>
+                    </div>
+
+
+
+
+                    <div class="instagram__right-column">
+                        <div class="instagram__header">
+                            <h3>INSTAGRAM</h3>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
