instagram container right column

--- a/index.html
+++ b/index.html
@@ -532,17 +532,137 @@
                                 </ul>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices...</p>
                             </div>
-
+                        </div>
+                        <div class="instagram__left-column-item">
+                            <img src="img/insta-2.jpg">
+                            <div class="instagram__left-column-item-content">    
+                                <div class="menu-spec">
+                                    <span>REVIEWS</span>
+                                </div>
+                                <h3>INFINITY WARD'S FOCUS ISN'T ON BATTLE ROYALE, CALL OF...</h3>
+                                <ul class="instagram__item-date">
+                                    <li>by</li>
+                                    <li class="admin-post">Admin</li>
+                                    <li>
+                                        <i class="fa fa-clock-o"></i>
+                                    </li>
+                                    <li> Aug 01, 2019</li>
+                                    <li>
+                                        <i class="fa fa-comment-o"></i>
+                                    </li>
+                                    <li>20</li>
+                                </ul>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices...</p>
+                            </div>
+                        </div>
+                        <div class="instagram__left-column-item">
+                            <img src="img/insta-3.jpg">
+                            <div class="instagram__left-column-item-content">    
+                                <div class="menu-spec">
+                                    <span>REVIEWS</span>
+                                </div>
+                                <h3>CAPCOM ASKS SELECT FANS TO TEST NEW RESIDENT EVIL GAME</h3>
+                                <ul class="instagram__item-date">
+                                    <li>by</li>
+                                    <li class="admin-post">Admin</li>
+                                    <li>
+                                        <i class="fa fa-clock-o"></i>
+                                    </li>
+                                    <li> Aug 01, 2019</li>
+                                    <li>
+                                        <i class="fa fa-comment-o"></i>
+                                    </li>
+                                    <li>20</li>
+                                </ul>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices...</p>
+                            </div>
+                        </div>
+                        <div class="instagram__left-column-item">
+                            <img src="img/insta-4.jpg">
+                            <div class="instagram__left-column-item-content">    
+                                <div class="menu-spec">
+                                    <span>REVIEWS</span>
+                                </div>
+                                <h3>TEAMFIGHT TACTICS IS IN CHAOS AFTER TODAY'S PATCH...</h3>
+                                <ul class="instagram__item-date">
+                                    <li>by</li>
+                                    <li class="admin-post">Admin</li>
+                                    <li>
+                                        <i class="fa fa-clock-o"></i>
+                                    </li>
+                                    <li> Aug 01, 2019</li>
+                                    <li>
+                                        <i class="fa fa-comment-o"></i>
+                                    </li>
+                                    <li>20</li>
+                                </ul>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices...</p>
+                            </div>
                         </div>
                     </div>
-
-
-
-
                     <div class="instagram__right-column">
                         <div class="instagram__header">
                             <h3>INSTAGRAM</h3>
                         </div>
+                        <div class="instagram__right-column-item">
+                            <img src="img/ip-1.jpg">
+                            <img src="img/ip-2.jpg">
+                            <img src="img/ip-3.jpg">
+                            <img src="img/ip-4.jpg">
+                        </div>
+                        <div class="instagram__header">
+                            <h3>BEST OF</h3>
+                        </div>
+                        <div class="instagram__right-column-raiting">
+                            <h4>THIS GAMING LAPTOP WITH A GTX 1660...</h4>
+                            <ul class="instagram__item-date">
+                                <li>
+                                    <i class="fa fa-clock-o"></i>
+                                </li>
+                                <li> Aug 01, 2019 </li>
+                                <li>
+                                    <i class="fa fa-comment-o"></i>
+                                </li>
+                                <li>20</li>
+                            </ul>
+                            <h4>THIS GAMING LAPTOP WITH A GTX 1660...</h4>
+                            <ul class="instagram__item-date">
+                                <li>
+                                    <i class="fa fa-clock-o"></i>
+                                </li>
+                                <li> Aug 01, 2019 </li>
+                                <li>
+                                    <i class="fa fa-comment-o"></i>
+                                </li>
+                                <li>20</li>
+                            </ul>
+                            <h4>THIS GAMING LAPTOP WITH A GTX 1660...</h4>
+                            <ul class="instagram__item-date">
+                                <li>
+                                    <i class="fa fa-clock-o"></i>
+                                </li>
+                                <li> Aug 01, 2019 </li>
+                                <li>
+                                    <i class="fa fa-comment-o"></i>
+                                </li>
+                                <li>20</li>
+                            </ul>
+                            <h4>THIS GAMING LAPTOP WITH A GTX 1660...</h4>
+                            <ul class="instagram__item-date">
+                                <li>
+                                    <i class="fa fa-clock-o"></i>
+                                </li>
+                                <li> Aug 01, 2019 </li>
+                                <li>
+                                    <i class="fa fa-comment-o"></i>
+                                </li>
+                                <li>20</li>
+                            </ul>
+                        </div>
+                        <div class="instagram__header">
+                            <h3>SUBSCRIBE</h3>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, eiusmod tempor.</p>
                     </div>
                 </div>
             </section>
