instagram container added forms, button and nav

--- a/index.html
+++ b/index.html
@@ -599,6 +599,20 @@
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices...</p>
                             </div>
                         </div>
+                        <div class="instagram__left-column-navigation">
+                            <div class="instagram__left-column-navigation-item">
+                                <span>1</span>
+                            </div>
+                            <div class="instagram__left-column-navigation-item">
+                                <span>2</span>
+                            </div>
+                            <div class="instagram__left-column-navigation-item">
+                                <span>3</span>
+                            </div>
+                            <div class="instagram__left-column-navigation-item">
+                                <span>NEXT</span>
+                            </div>
+                        </div>
                     </div>
                     <div class="instagram__right-column">
                         <div class="instagram__header">
@@ -663,6 +677,15 @@
                             <h3>SUBSCRIBE</h3>
                         </div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, eiusmod tempor.</p>
+                        <div class="instagram__input">
+                            <input type="text" placeholder="Name">
+                        </div>
+                        <div class="instagram__input">
+                            <input type="text" placeholder="Email">
+                        </div>
+                        <div class="instagram__subscribe">
+                            <span>SUBSCRIBE</span>
+                        </div>
                     </div>
                 </div>
             </section>
