--- a/index.html
+++ b/index.html
@@ -690,5 +690,103 @@
                 </div>
             </section>
         </main>
+        <footer class="footer-section">
+            <div class="footer__container">
+                <div class="footer__container-column">
+                    <img src="img/f-logo.png">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua lacus vel facilisis.</p>
+                    <div class="footer__social">
+                        <div class="footer__social-item">
+                            <i class="fa fa-facebook"></i>
+                        </div>
+                        <div class="footer__social-item">
+                            <i class="fa fa-twitter"></i>
+                        </div>
+                        <div class="footer__social-item">
+                            <i class="fa fa-youtube"></i>
+                        </div>
+                        <div class="footer__social-item">
+                            <i class="fa fa-instagram"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer__container-column">
+                    <div class="footer__header">
+                        <h3>EDITOR'S CHOICE</h3>
+                    </div>
+                    <div class="footer__container-column-item">    
+                        <img src="img/editor-1.jpg">
+                        <div class="footer__container-column-item-content">
+                            <h4>A MONSTER PROM POSTER GOT HIJACKED FOR A PAPA ROACH CONCERT...</h4>
+                            <ul class="footer__item-date">
+                                <li>
+                                    <i class="fa fa-clock-o"></i>
+                                </li>
+                                <li> Aug 01, 2019</li>
+                                <li>
+                                    <i class="fa fa-comment-o"></i>
+                                </li>
+                                <li>12</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="footer__container-column-item">    
+                        <img src="img/editor-2.jpg">
+                        <div class="footer__container-column-item-content">
+                            <h4>FACEBOOK WANTS TO READ YOUR THOUGHTS WITH ITS AUGMENTED...</h4>
+                            <ul class="footer__item-date">
+                                <li>
+                                    <i class="fa fa-clock-o"></i>
+                                </li>
+                                <li> Aug 01, 2019</li>
+                                <li>
+                                    <i class="fa fa-comment-o"></i>
+                                </li>
+                                <li>12</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer__container-column">
+                    <div class="footer__header">
+                        <h3>TAGS CLOUD</h3>
+                    </div>
+                    <div class="footer__tags-list">
+                        <div class="footer__tags-list-item"> 
+                            <span>Gaming</span>
+                        </div>   
+                        <div class="footer__tags-list-item">
+                            <span>Platform</span>
+                        </div>
+                        <div class="footer__tags-list-item">
+                            <span>Playstation</span>
+                        </div>
+                        <div class="footer__tags-list-item">
+                            <span>Hardware</span>
+                        </div>
+                        <div class="footer__tags-list-item">
+                            <span>Reviews</span>
+                        </div>
+                        <div class="footer__tags-list-item">
+                            <span>Simulation</span>
+                        </div>
+                        <div class="footer__tags-list-item">
+                            <span>Strategy</span>
+                        </div>
+                        <div class="footer__tags-list-item">
+                            <span>Scientific</span>
+                        </div>
+                        <div class="footer__tags-list-item">
+                            <span>References</span>
+                        </div>
+                        <div class="footer__tags-list-item">
+                            <span>Role-playing</span>
+                        </div>
+                        <div class="footer__tags-list-item">
+                            <span>Adventurea</span>
+                        </div>
+                    </div>
+            </div>
+        </footer>
     </body>
 </html>
