header added hover before after

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="top-head">
                 <ul class="region-info">
                     <li>
-                        <i class="fa fa-sun-o"></i> 20C London 
+                        <i class="fa fa-sun-o"></i> 20<sup>C</sup> London 
                     </li>
                     <li>
                         <i class="fa fa-clock-o"></i> Aug 01, 2019 
@@ -49,23 +49,127 @@
                             <i class="fa fa-bars"></i>
                         </span>
                     </li>
-                    <li>
+                    <li class="activ">
                         <span>HOME</span>
                     </li>
-                    <li>
+                    <li class="platform-menu">
                         <span>PLATFORM</span>
+                        <i class="fa fa-angle-down"></i>
+                        <div class="platform-menu__container">
+                            <ul>
+                                <li>
+                                    <span>PLAYSTATION</span>
+                                </li>
+                                <li>
+                                    <span>WINDOWS</span>
+                                </li>
+                                <li>
+                                    <span>MOBILE</span>
+                                </li>
+                                <li>
+                                    <span>XBOX</span>
+                                </li>
+                            </ul>
+                            <div class="platform-menu__container-content">
+                                <div class="platform-menu__container-content-item">
+                                    <img src="img/mm-1.jpg">
+                                    <h4>A MONSTER PROM POSTER GOT HIJACKED FOR A PAPA ROACH CONCERT...</h4>
+                                    <ul class="platform-menu__item-date">
+                                        <li>
+                                            <i class="fa fa-clock-o"></i>
+                                        </li>
+                                        <li> Aug 01, 2019 </li>
+                                        <li>
+                                            <i class="fa fa-comment-o"></i>
+                                        </li>
+                                        <li>12</li>
+                                    </ul>
+                                </div>
+                                <div class="platform-menu__container-content-item">
+                                    <img src="img/mm-2.jpg">
+                                    <h4>A NEW BORDERLANDS 3 TRAILER INTRODUCES MOZE AND HER...</h4>
+                                    <ul class="platform-menu__item-date">
+                                        <li>
+                                            <i class="fa fa-clock-o"></i>
+                                        </li>
+                                        <li> Aug 01, 2019 </li>
+                                        <li>
+                                            <i class="fa fa-comment-o"></i>
+                                        </li>
+                                        <li>12</li>
+                                    </ul>
+                                </div>
+                                <div class="platform-menu__container-content-item">
+                                    <img src="img/mm-3.jpg">
+                                    <h4>TEAMFIGHT TACTICS IS IN CHAOS AFTER TODAY'S PATCH...</h4>
+                                    <ul class="platform-menu__item-date">
+                                        <li>
+                                            <i class="fa fa-clock-o"></i>
+                                        </li>
+                                        <li> Aug 01, 2019 </li>
+                                        <li>
+                                            <i class="fa fa-comment-o"></i>
+                                        </li>
+                                        <li>12</li>
+                                    </ul>
+                                </div>
+                                <div class="platform-menu__container-content-item">
+                                    <img src="img/mm-4.jpg">
+                                    <h4>BORDERLANDS 2 DEV EXPLAINS WHY THERE'S MYSTERIOUS BOXES...</h4>
+                                    <ul class="platform-menu__item-date">
+                                        <li>
+                                            <i class="fa fa-clock-o"></i>
+                                        </li>
+                                        <li> Aug 01, 2019 </li>
+                                        <li>
+                                            <i class="fa fa-comment-o"></i>
+                                        </li>
+                                        <li>12</li>
+                                    </ul>
+                                </div>
+                                <div class="platform-menu__container-content-item">
+                                    <img src="img/mm-5.jpg">
+                                    <h4>CAPCOM ASKS SELECT FANS TO TEST NEW RESIDENT EVIL GAME</h4>
+                                    <ul class="platform-menu__item-date">
+                                        <li>
+                                            <i class="fa fa-clock-o"></i>
+                                        </li>
+                                        <li> Aug 01, 2019 </li>
+                                        <li>
+                                            <i class="fa fa-comment-o"></i>
+                                        </li>
+                                        <li>12</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
                     </li>
-                    <li>
+                    <li class="pages-menu">
                         <span>PAGES</span>
+                        <i class="fa fa-angle-down"></i>
+                        <div class="pages-menu__container">
+                            <ul>
+                                <li>Categories</li>
+                                <li>Categories grid</li>
+                                <li>Typography</li>
+                                <li>Post default</li>
+                                <li>Post gallery</li>
+                                <li>Post review</li>
+                                <li>Contact</li>
+                            </ul>
+                        </div>
                     </li>
                     <li>
                         <span>REVIEWS</span>
+                        <i class="fa fa-angle-down"></i>
                     </li>
                     <li>
                         <span>WINDOWS</span>
+                        <i class="fa fa-angle-down"></i>
                     </li>
                     <li>
                         <span>VIDEOS</span>
+                        <i class="fa fa-angle-down"></i>
                     </li>
                     <li>
                         <span>
