added hover's, before's, edited inputs, subscribe

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                             <span>PLAYSTATION</span>
                         </div>
                         <h2>DOWNWELL AND SPACE HULK: TACTICS ARE COMING TO XBOX GAME PASS FOR PC</h2>
-                        <div>
+                        <div class="menu-spec__comment">
                             <img src="img/meta-pic.jpg">
                             <span>by Marcin Jankowski</span>
                             <span>Aug 01, 2019</span>
@@ -344,7 +344,7 @@
                         <div class="news__header">
                             <h3>NEWS & UPDATE</h3>
                             <ul class="news__menu">
-                                <li>All</li>
+                                <li class="news__menu_selected">All</li>
                                 <li>Platform</li>
                                 <li>hardware</li>
                                 <li>Reviews</li>
@@ -546,7 +546,7 @@
                     <div class="guide__header">
                         <h3>VIDEOS GUIDE</h3>
                         <ul class="guide__menu">
-                            <li>All</li>
+                            <li class="guide__menu_selected">All</li>
                             <li>Platform</li>
                             <li>hardware</li>
                             <li>Reviews</li>
@@ -890,6 +890,7 @@
                             <span>Adventurea</span>
                         </div>
                     </div>
+                </div>
             </div>
         </footer>
     </body>
