tablet adaptiv sections intro, latest-preview, news

--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                                     <span>1,2k Follow</span>
                                 </li>
                                 <li>
-                                    <i class="fa fa-facebook news__social-icon"></i>
+                                    <i class="fa fa-youtube news__social-icon"></i>
                                     <span>Youtube</span>
                                     <span>1,2k Follow</span>
                                 </li>
