--- a/index.html
+++ b/index.html
@@ -735,17 +735,29 @@
                             <h3>BEST OF</h3>
                         </div>
                         <div class="instagram__right-column-raiting">
-                            <h4>THIS GAMING LAPTOP WITH A GTX 1660...</h4>
-                            <ul class="instagram__item-date">
-                                <li>
-                                    <i class="fa fa-clock-o"></i>
-                                </li>
-                                <li> Aug 01, 2019 </li>
-                                <li>
-                                    <i class="fa fa-comment-o"></i>
-                                </li>
-                                <li>20</li>
-                            </ul>
+                            <div class="instagram__right-column-container">
+                                <div class="raiting-container">
+                                    <svg class="round" viewbox="-5 -5 110 110" width="60" height="60">
+                                        <circle cx="50" cy="50" r="50" />  
+                                    </svg>
+                                    <svg class="round" viewbox="-5 -5 110 110" width="60" height="60">
+                                        <circle cx="50" cy="50" r="50" />  
+                                    </svg>
+                                </div>  
+                                <div class="raiting-content">  
+                                    <h4>THIS GAMING LAPTOP WITH A GTX 1660...</h4>
+                                    <ul class="instagram__item-date">
+                                        <li>
+                                            <i class="fa fa-clock-o"></i>
+                                        </li>
+                                        <li> Aug 01, 2019 </li>
+                                        <li>
+                                            <i class="fa fa-comment-o"></i>
+                                        </li>
+                                        <li>20</li>
+                                    </ul>
+                                </div>  
+                            </div>  
                             <h4>THIS GAMING LAPTOP WITH A GTX 1660...</h4>
                             <ul class="instagram__item-date">
                                 <li>
