all raiting circles added

--- a/index.html
+++ b/index.html
@@ -736,11 +736,11 @@
                         </div>
                         <div class="instagram__right-column-raiting">
                             <div class="instagram__right-column-container">
-                                <div class="raiting-container">
-                                    <svg class="round" viewbox="-5 -5 110 110" width="60" height="60">
+                                <div class="raiting-container-first">
+                                    <svg class="round-first" viewbox="-5 -5 110 110" width="60" height="60">
                                         <circle cx="50" cy="50" r="50" />  
                                     </svg>
-                                    <svg class="round" viewbox="-5 -5 110 110" width="60" height="60">
+                                    <svg class="round-back" viewbox="-5 -5 110 110" width="60" height="60">
                                         <circle cx="50" cy="50" r="50" />  
                                     </svg>
                                 </div>  
@@ -757,40 +757,76 @@
                                         <li>20</li>
                                     </ul>
                                 </div>  
-                            </div>  
-                            <h4>THIS GAMING LAPTOP WITH A GTX 1660...</h4>
-                            <ul class="instagram__item-date">
-                                <li>
-                                    <i class="fa fa-clock-o"></i>
-                                </li>
-                                <li> Aug 01, 2019 </li>
-                                <li>
-                                    <i class="fa fa-comment-o"></i>
-                                </li>
-                                <li>20</li>
-                            </ul>
-                            <h4>THIS GAMING LAPTOP WITH A GTX 1660...</h4>
-                            <ul class="instagram__item-date">
-                                <li>
-                                    <i class="fa fa-clock-o"></i>
-                                </li>
-                                <li> Aug 01, 2019 </li>
-                                <li>
-                                    <i class="fa fa-comment-o"></i>
-                                </li>
-                                <li>20</li>
-                            </ul>
-                            <h4>THIS GAMING LAPTOP WITH A GTX 1660...</h4>
-                            <ul class="instagram__item-date">
-                                <li>
-                                    <i class="fa fa-clock-o"></i>
-                                </li>
-                                <li> Aug 01, 2019 </li>
-                                <li>
-                                    <i class="fa fa-comment-o"></i>
-                                </li>
-                                <li>20</li>
-                            </ul>
+                            </div>
+                            <div class="instagram__right-column-container">
+                                <div class="raiting-container-second">
+                                    <svg class="round-second" viewbox="-5 -5 110 110" width="60" height="60">
+                                        <circle cx="50" cy="50" r="50" />  
+                                    </svg>
+                                    <svg class="round-back" viewbox="-5 -5 110 110" width="60" height="60">
+                                        <circle cx="50" cy="50" r="50" />  
+                                    </svg>
+                                </div>
+                                <div class="raiting-content">  
+                                    <h4>THIS GAMING LAPTOP WITH A GTX 1660...</h4>
+                                    <ul class="instagram__item-date">
+                                        <li>
+                                            <i class="fa fa-clock-o"></i>
+                                        </li>
+                                        <li> Aug 01, 2019 </li>
+                                        <li>
+                                            <i class="fa fa-comment-o"></i>
+                                        </li>
+                                        <li>20</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="instagram__right-column-container">
+                                <div class="raiting-container-third">
+                                    <svg class="round-third" viewbox="-5 -5 110 110" width="60" height="60">
+                                        <circle cx="50" cy="50" r="50" />  
+                                    </svg>
+                                    <svg class="round-back" viewbox="-5 -5 110 110" width="60" height="60">
+                                        <circle cx="50" cy="50" r="50" />  
+                                    </svg>
+                                </div>
+                                <div class="raiting-content">
+                                    <h4>THIS GAMING LAPTOP WITH A GTX 1660...</h4>
+                                    <ul class="instagram__item-date">
+                                        <li>
+                                            <i class="fa fa-clock-o"></i>
+                                        </li>
+                                        <li> Aug 01, 2019 </li>
+                                        <li>
+                                            <i class="fa fa-comment-o"></i>
+                                        </li>
+                                        <li>20</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="instagram__right-column-container">
+                                <div class="raiting-container-fourth">
+                                    <svg class="round-fourth" viewbox="-5 -5 110 110" width="60" height="60">
+                                        <circle cx="50" cy="50" r="50" />  
+                                    </svg>
+                                    <svg class="round-back" viewbox="-5 -5 110 110" width="60" height="60">
+                                        <circle cx="50" cy="50" r="50" />  
+                                    </svg>
+                                </div>
+                                <div class="raiting-content">        
+                                    <h4>THIS GAMING LAPTOP WITH A GTX 1660...</h4>
+                                    <ul class="instagram__item-date">
+                                        <li>
+                                            <i class="fa fa-clock-o"></i>
+                                        </li>
+                                        <li> Aug 01, 2019 </li>
+                                        <li>
+                                            <i class="fa fa-comment-o"></i>
+                                        </li>
+                                        <li>20</li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                         <div class="instagram__header">
                             <h3>SUBSCRIBE</h3>
