tablet adaptiv instagram container

--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
                             <img src="img/insta-2.jpg">
                             <div class="instagram__left-column-item-content">    
                                 <div class="menu-spec">
-                                    <span>REVIEWS</span>
+                                    <span>WINDOWS</span>
                                 </div>
                                 <h3>INFINITY WARD'S FOCUS ISN'T ON BATTLE ROYALE, CALL OF...</h3>
                                 <ul class="instagram__item-date">
@@ -666,7 +666,7 @@
                             <img src="img/insta-3.jpg">
                             <div class="instagram__left-column-item-content">    
                                 <div class="menu-spec">
-                                    <span>REVIEWS</span>
+                                    <span>HARDWARE</span>
                                 </div>
                                 <h3>CAPCOM ASKS SELECT FANS TO TEST NEW RESIDENT EVIL GAME</h3>
                                 <ul class="instagram__item-date">
@@ -688,7 +688,7 @@
                             <img src="img/insta-4.jpg">
                             <div class="instagram__left-column-item-content">    
                                 <div class="menu-spec">
-                                    <span>REVIEWS</span>
+                                    <span>PLAYSTATION</span>
                                 </div>
                                 <h3>TEAMFIGHT TACTICS IS IN CHAOS AFTER TODAY'S PATCH...</h3>
                                 <ul class="instagram__item-date">
