tablet adaptiv fix

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                                 <div class="menu-spec">
                                     <span>REVIEWS</span>
                                 </div>
-                                <h3>Get one of our favorite nvme ssds, the 2tb samsung
+                                <h3>GET ONE OF OUR FAVORITE NAME SSDS, THE 2TB SAMSUNG
                                     970 evo, for $120 less than nomal</h3>
                                 <ul class="news__item-date">
                                     <li>by</li>
@@ -387,7 +387,7 @@
                                     </div>
                                 </div>
                                 <img src="img/news-3.jpg">
-                                <h4>Downwell and space hulk: tactics are coming to...</h4>
+                                <h4>DOWNWELL AND SPACE HULK: TACTICS ARE COMING TO...</h4>
                                 <ul class="news__item-date">
                                     <li>
                                         <i class="fa fa-clock-o"></i>
@@ -396,50 +396,46 @@
                                     <li>
                                         <i class="fa fa-comment-o"></i>
                                     </li>
-                                    <li>12</li>
+                                    <li>20</li>
                                 </ul>
                             </div>
-                            <div class="news__row">
-                                <div class="news__row-item">
-                                    <div class="news__row-item-reviews">
-                                        <div class="menu-spec">
-                                            <span>REVIEWS</span>
-                                        </div>
-                                    </div>
-                                    <img src="img/news-4.jpg">
-                                    <h4>Downwell and space hulk: tactics are coming to...</h4>
-                                    <ul class="news__item-date">
-                                        <li>
-                                            <i class="fa fa-clock-o"></i>
-                                        </li>
-                                        <li> Aug 01, 2019</li>
-                                        <li>
-                                            <i class="fa fa-comment-o"></i>
-                                        </li>
-                                        <li>12</li>
-                                    </ul>
-                                </div>
-                                <div class="news__row">
-                                    <div class="news__row-item">
-                                        <div class="news__row-item-reviews">
-                                            <div class="menu-spec">
-                                                <span>REVIEWS</span>
-                                            </div>
-                                        </div>
-                                        <img src="img/news-2.jpg">
-                                        <h4>Downwell and space hulk: tactics are coming to...</h4>
-                                        <ul class="news__item-date">
-                                            <li>
-                                                <i class="fa fa-clock-o"></i>
-                                            </li>
-                                            <li> Aug 01, 2019</li>
-                                            <li>
-                                                <i class="fa fa-comment-o"></i>
-                                            </li>
-                                            <li>12</li>
-                                        </ul>
+                            <div class="news__row-item">
+                                <div class="news__row-item-reviews">
+                                    <div class="menu-spec">
+                                        <span>REVIEWS</span>
                                     </div>
                                 </div>
+                                <img src="img/news-4.jpg">
+                                <h4>DOWNWELL AND SPACE HULK: TACTICS ARE COMING TO...</h4>
+                                <ul class="news__item-date">
+                                    <li>
+                                        <i class="fa fa-clock-o"></i>
+                                    </li>
+                                    <li> Aug 01, 2019</li>
+                                    <li>
+                                        <i class="fa fa-comment-o"></i>
+                                    </li>
+                                    <li>20</li>
+                                </ul>
+                            </div>
+                            <div class="news__row-item">
+                                <div class="news__row-item-reviews">
+                                    <div class="menu-spec">
+                                        <span>REVIEWS</span>
+                                    </div>
+                                </div>
+                                <img src="img/news-2.jpg">
+                                <h4>DOWNWELL AND SPACE HULK: TACTICS ARE COMING TO...</h4>
+                                <ul class="news__item-date">
+                                    <li>
+                                        <i class="fa fa-clock-o"></i>
+                                    </li>
+                                    <li> Aug 01, 2019</li>
+                                    <li>
+                                        <i class="fa fa-comment-o"></i>
+                                    </li>
+                                    <li>20</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -865,7 +861,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="footer__container-column">
+                <div class="footer__container-column-wrap"><div class="footer__container-column">
                     <div class="footer__header">
                         <h3>EDITOR'S CHOICE</h3>
                     </div>
@@ -902,6 +898,7 @@
                         </div>
                     </div>
                 </div>
+                
                 <div class="footer__container-column">
                     <div class="footer__header">
                         <h3>TAGS CLOUD</h3>
@@ -941,7 +938,7 @@
                             <span>Adventurea</span>
                         </div>
                     </div>
-                </div>
+                </div></div>
             </div>
         </footer>
     </body>
